# python-intermediate-inflammation

./: .gitignore  README.md  inflammation-analysis.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
inflammation/: compute_data.py  csv_data_source.py  models.py
tests/: test_compute_data.py  test_models.py
