[tool.poetry]
name = "inflam"
version = "1.0.0"
description = "Analyse patient inflammation data"
authors = ["Marcus Quantrill <marcus.quantrill@ukaea.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "<2"
matplotlib = "^3.7.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
